# mydak-server

./: .clangd  .gitignore  CMakeLists.txt  debug.sh  release.sh
core/: #Server.cpp#  Connection.cpp  Connection.hpp  Server.cpp  Server.hpp  connection.cpp  connection.hpp  main.cpp  proto.hpp  server.cpp  server.hpp
core/other/: Clients.cpp  Clients.hpp
